# QuarkEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_engine.bat  build_engine.sh  build_plugin.bat  build_plugin.sh  imgui.ini
.github/workflows/: build.yml  run.yml
assets/: lighting.fs  lighting.vs  shadowmap.fs  shadowmap.vs
assets/lang/: arabic.json  azerbaijani.json  belarusian.json  bosnian.json  bulgarian.json  catalan.json  chuvash.json  czech.json  danish.json  dutch.json  en_us.json  english.json  esperanto.json  estonian.json  finnish.json  french.json  galician.json  german.json  greek.json  hungarian.json  index.json  italian.json  japanese.json  korean.json  kyrgyz.json  license.json  persian.json  polish.json  portuguese.json  romanian.json  ru_ru.json  russian.json  serbian_cyrillic.json  simplified_chinese.json  slovak.json  spanish.json  swedish.json  traditional_chinese.json  turkish.json  ukrainian.json
include/: camera.h  component.h  editable_mesh.h  editor.h  entity.h  hub.h  lighting.h  models.h  scene.h  text_mesh.h  version.h
include/editor/: editor.h  editor_assets.h  editor_components_ui.h  editor_entity.h  editor_hierarchy_utils.h  editor_ui.h  editor_utils.h  editor_viewers.h
include/plugins/: plugin_manager.h
plugins/MyPlugin/: plugin.cpp
quark-libs/imgui/include/: imgui_widgets.cpp  rlImGui.cpp
quark-libs/raylib/src/: CMakeLists.txt  raylib.h
scripts/: build_engine.sh  sync_lang.ps1  sync_lang.sh
src/: camera.cpp  component.cpp  editable_mesh.cpp  editor.cpp  entity.cpp  hub.cpp  language_manager.cpp  lighting.cpp  main.cpp  models.cpp  project.cpp  qcImGui.cpp  qcImGui.h  quark_imgui.cpp  quark_imgui.h  scene.cpp  tex.cpp  text_mesh.cpp
src/editor/: editor.cpp  editor.h  editor_assets.cpp  editor_assets.h  editor_components_ui.cpp  editor_components_ui.h  editor_entity.cpp  editor_entity.h  editor_file_utils.cpp  editor_file_utils.h  editor_hierarchy_utils.cpp  editor_hierarchy_utils.h  editor_ui.cpp  editor_ui.h  editor_utils.cpp  editor_utils.h  editor_viewers.cpp  editor_viewers.h  entity.cpp
src/headers/: camera.h  component.h  editable_mesh.h  editor.h  entity.h  language_manager.h  lighting.h  models.h  project.h  rlights.h  tex.h  text_mesh.h  version.h
src/plugins/: plugin.h  plugin_manager.cpp  plugin_manager.h
workflows/: build.yml
